tests/fixtures/invalid/pointer_arithmetic_out_of_bounds.c
int main() {
    int values[2];
    int *p = values;
    int *q = p + 3;
    return *q;
}
